--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
 	"description": "A form.io form render as PDF.",
 	"private": true,
 	"scripts": {
-		"start": "npm install && nodemon --max_old_space_size=4096 render.js"
+		"start": "nodemon --max_old_space_size=4096 render.js"
 	},
 	"author": "Panagiotis Skarvelis",
-	"license": "EUPL v1.1",
+	"license": "GPL V3",
 	"dependencies": {
-                "escape-json-node":"^2.0.0",
-                "bootstrap":"^4.1.1",
-                "uuid":"^3.3.2",
-		"formiojs": "^2.32.3",
-                "formio-service":"^1.4.0",
-		"body-parser": "^1.12.4",
-		"express": "^4.12.4",
-		"method-override": "^2.3.3",
-                "chrome-headless-render-pdf":"^1.7.2",
-		"nodemon": "*"
+              "escape-json-node":"^2.0.0",
+              "bootstrap":"^4.1.1",
+              "uuid":"^3.3.2",
+		      "formiojs": "^2.32.3",
+              "formio-service":"^1.4.0",
+		      "body-parser": "^1.12.4",
+		      "express": "^4.12.4",
+		      "method-override": "^2.3.3",
+              "chrome-headless-render-pdf":"^1.7.2",
+		      "nodemon": "*"
 	}
 }
