--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "GPL V3",
 	"dependencies": {
               "escape-json-node":"^2.0.0",
+	      "jquery":"^1.9.1",
               "bootstrap":"^4.1.1",
               "uuid":"^3.3.2",
 		      "formiojs": "^2.32.3",
@@ -17,7 +18,7 @@
 		      "body-parser": "^1.12.4",
 		      "express": "^4.12.4",
 		      "method-override": "^2.3.3",
-              "chrome-headless-render-pdf":"^1.7.2",
+              "chrome-headless-render-pdf":"^1.8.0",
 		      "nodemon": "*"
 	}
 }
